k8s/ocp-4.x/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cds-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-cluster
spec:
  rules:
    - host: cds.domain.org
      http:
        paths:
          - backend:
              service:
                name: cds
                port:
                  number: 8081
            pathType: ImplementationSpecific
            path: /
          - backend:
              service:
                name: cds
                port:
                  number: 8080
            pathType: ImplementationSpecific
            path: /api/v1/
